# sample_keyword_project

./: README.md  README.rst  main.py
dbt_model/: README.md  dbt_project.yml
dbt_model/data/: keywords.csv
dbt_model/models/example/: base_post_sentences.sql  keyword_extraction.sql  schema.yml  stg_keyword_extraction.sql
poetry_project/: get_data.py  pyproject.toml
poetry_project/tests/: test_dbt_reddit.py
python_scripts/: README.md  data_visualization.py  get_data.py  keyword_matches.csv  pyproject.toml
python_scripts/tests/: test_python_scripts.py
sample_keyword_project/: packages.yml
sample_keyword_project/data/: keywords.csv  posts.csv
sample_keyword_project/models/example/: base_keywords.sql  base_posts.sql  final_keyword_extraction.sql  keyword_extraction.sql  schema.yml  stg_keyword_extraction.sql
