[tool.poetry]
name = "dbt_reddit"
version = "0.1.0"
description = ""
authors = ["adpleach <adpleach@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
psaw = "^0.1.0"
dbt = "^0.20.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
