[tool.poetry]
name = "python_scripts"
version = "0.1.0"
description = ""
authors = ["adpleach <adpleach@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.0"
psaw = "^0.1.0"
matplotlib = "^3.5.1"
wordcloud = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
